--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,9 @@ dependencies {
     // Request/Response serialization
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
 
+    // Scraping
+    implementation 'it.skrape:skrapeit:1.2.2'
+
     // Devtools
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
@@ -37,7 +40,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
-tasks.withType(KotlinCompile) {
+tasks.withType(KotlinCompile).configureEach {
     kotlinOptions {
         freeCompilerArgs += '-Xjsr305=strict'
         jvmTarget = '17'
